fix: mobile chat layout bug

--- a/Frontend/src/styles/chatarea.css
+++ b/Frontend/src/styles/chatarea.css
@@ -413,6 +413,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 70px; 
     z-index: 100;
   }
 
@@ -421,14 +422,15 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 70px; 
     z-index: 100;
     background: white;
   }
 
   .chat-messages {
     position: absolute;
-    top: 70px;     /* header height */
-    bottom: 70px;  /* input height */
+    top: 70px;
+    bottom: 70px;
     left: 0;
     right: 0;
 
@@ -439,7 +441,9 @@
 @media (max-width: 480px) {
 
   .chat-area {
-    height: 100dvh; 
+    height: 100dvh;
+    overflow: hidden;
+    position: relative;
   }
 
   .chat-header {
@@ -447,6 +451,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 65px; 
     z-index: 100;
   }
 
@@ -455,14 +460,16 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 75px; 
     z-index: 100;
     background: white;
+
   }
 
   .chat-messages {
     position: absolute;
-    top: 65px;   
-    bottom: 85px; 
+    top: 65px;
+    bottom: 75px;
     left: 0;
     right: 0;
     overflow-y: auto;
